'商品详情，商品动画组件'

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,10 @@
   <title>Document</title>
 </head>
 
-<body>
+<body style="background-color: white">
+  <!--首页-->
+
+
   <!-- 这是容器 -->
   <div id="app">
     
